<resources>
    <string name="app_name">GroceriesApp</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logging">Logging</string>
    <string name="enter_your_email_and_password">Enter your email and password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="username">Username</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="signup_credentials_text">Enter your username, email and password to continue</string>
    <string name="exclusive_offer">Exclusive Offer</string>
    <string name="see_all">See all</string>
    <string name="organic_bananas">Organic Bananas</string>
    <string name="shop">Shop</string>
    <string name="explore">Explore</string>
    <string name="cart">Cart</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>
    <string name="get_started">Get Started</string>
    <string name="getstarted_small_description">Get started on your grocery shopping journey with our easy-to-use app!</string>
    <string name="welcome_nto_our_store">Welcome\nto our store</string>
    <string name="phone_small_description">Enter your phone number for smooth delivery updates. We\'ll keep you in the loop every step of the way!</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="MAR_CODE">+212</string>
    <string name="verification_code_small_description">Please enter the 6-digit verification code sent to your mobile number:</string>
    <string name="resend_code">Resend Code</string>
    <string name="sms_code">SMS Code</string>
    <string name="allow_location_access">Allow Location Access</string>
    <string name="location_access_description">We need your location to provide you with accurate delivery estimates and to ensure that we can deliver to your area.</string>
    <string name="no_thanks">No Thanks</string>
    <string name="search_store">Search Store</string>
    <string name="checkout">Checkout</string>
    <string name="favorites">Favorites</string>
    <string name="add_all_to_cart">Add all to cart</string>
    <string name="orders">Orders</string>
    <string name="my_information">My Information</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="promo_code">Promo Code</string>
    <string name="notifications">Notifications</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="log_out">Log Out</string>
    <string name="product_details">Product Details</string>
    <string name="small_description">Apples are nutritious. Apples may be good for weight loss. apples may be good for your heart. As part of a healthful and varied dietApples are nutritious.</string>
    <string name="order_now">Order Now</string>
    <string name="review_sample">First time when I got this product, I didnt expect that much from it, I am buying this product every week. I really recommend it</string>
    <string name="reviews">Reviews</string>
    <string name="similar_products">Similar Products</string>
    <string name="description">Description</string>
    <string name="my_cart">My Cart</string>
    <string name="cancel">Cancel</string>
    <string name="filter">Filter</string>
    <string name="reset">Reset</string>
    <string name="set_your_address">Set your address</string>
    <string name="apply_promo_code">Apply promo code</string>
    <string name="apply">Apply</string>
    <string name="go_to_payment">Go to Payment</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="address">Address</string>
    <string name="phone">Phone number</string>
    <string name="city">City</string>
    <string name="save">Save</string>
    <string name="orders_history">Orders History</string>
    <string name="active">Active</string>
    <string name="delivered">Delivered</string>
    <string name="track_order">Track Order</string>
    <string name="continue_shopping">Continue shopping</string>
    <string name="wholesale_mode">Wholesale Mode</string>
    <string name="review">Review</string>
    <string name="submit_review">Submit Review</string>
    <string name="add_review">Add Review</string>
    <string name="choose_a_product_nyou_ordered_to_review_it">Choose a product \nyou ordered to review it</string>
    <string name="reviewed">Reviewed</string>
    <string name="share_your_product_experience">Share your product experience.</string>
</resources>