<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.address.AddressFragment"
    android:padding="@dimen/_10sdp">
    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gilroy_semi_bold"
        android:text="Address"
        android:textColor="@color/title_color"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintBottom_toBottomOf="@+id/address_back_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/address_back_btn" />
    <Button
        android:id="@+id/address_back_btn"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_back_arrow_round"
        app:iconTint="@color/title_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/address_first_name_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        app:errorEnabled="true"
        app:boxStrokeColor="@color/main_btn_color"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_3sdp"
        app:layout_constraintEnd_toStartOf="@+id/address_last_name_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_back_btn">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address_first_name_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/address_last_name_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        app:errorEnabled="true"
        app:boxStrokeColor="@color/main_btn_color"
        android:layout_marginStart="@dimen/_3sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/address_first_name_layout"
        app:layout_constraintTop_toTopOf="@+id/address_first_name_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address_last_name_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/address_address_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        app:errorEnabled="true"
        app:boxStrokeColor="@color/main_btn_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_first_name_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address_address_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/address_phone_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        app:boxStrokeColor="@color/main_btn_color"
        app:errorEnabled="true"
        android:layout_marginEnd="@dimen/_3sdp"
        app:layout_constraintEnd_toStartOf="@+id/address_city_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_address_layout"
        app:prefixText="+212"
        app:prefixTextColor="@color/main_btn_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address_phone_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/address_city_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/city"
        app:boxStrokeColor="@color/main_btn_color"
        app:errorEnabled="true"
        android:layout_marginStart="@dimen/_3sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/address_phone_layout"
        app:layout_constraintTop_toBottomOf="@+id/address_address_layout"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address_city_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/address_save_btn"
        android:layout_width="0dp"
        android:layout_height="@dimen/_50sdp"
        style="@style/MainButtonStyle"
        android:text="@string/save"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.956" />

    <ProgressBar
        android:id="@+id/address_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />


</androidx.constraintlayout.widget.ConstraintLayout>