<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.startup.GetStartedFragment">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/img"
        android:scaleType="centerCrop"
        android:fitsSystemWindows="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/getstarted_btn"
        style="@style/MainButtonStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/_55sdp"
        android:layout_marginHorizontal="@dimen/_24sdp"
        android:text="@string/get_started"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.903" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_14sdp"
        android:fontFamily="@font/gilroy_medium"
        android:gravity="center"
        android:text="@string/getstarted_small_description"
        android:textColor="@color/getstarted_subtitle_color"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toTopOf="@+id/getstarted_btn"
        app:layout_constraintEnd_toEndOf="@+id/getstarted_btn"
        app:layout_constraintStart_toStartOf="@+id/getstarted_btn" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_14sdp"
        android:fontFamily="@font/gilroy_semi_bold"
        android:gravity="center"
        android:text="@string/welcome_nto_our_store"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_35ssp"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/textView8" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_14sdp"
        android:src="@drawable/app_logo_white"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="@+id/textView9" />

</androidx.constraintlayout.widget.ConstraintLayout>